# nixos-config

./: NEOVIM.md  PACKAGES.md  README.md  configuration.nix  default.nix  flake.nix  lib.nix  mkSystem.nix
.github/workflows/: check.yml
commands/: default.nix
commands/init/: default.nix
docs/: AI.md  CUSTOM_COMMANDS.md  LANGUAGES.md  NEOVIM.md  PACKAGES.md  VMWARE.md
hardwares/: aarch64-linux.nix
home-manager/: bottom.nix  custom.nix  default.nix  fastfetch.nix  fish.nix  gh.nix  ghostty.nix  git.nix  glances.nix  glow.nix  jless.nix  jq.nix  kitty  kitty.nix  languages.nix  mermaid.nix  neovim.nix  nq.nix  osquery.nix  oxker.nix  somo.nix  tabiew.nix  tmux.nix  tree.nix  wtfutil.nix
home-manager/ai/: antigravity.nix  claude-statusline.fish  claude.nix  default.nix  gemini.nix  github.nix  gitnexus.nix  mcp-servers.nix  mcpServers.json  npx.nix  obsidian.nix  rtk.nix  uv.nix
home-manager/fish/: agent.nix  agents.nix  custom.nix  default.nix  docs.nix  mac.nix  nord.nix  tailscale.nix  tide.nix
home-manager/languages/: db.nix  default.nix  nodejs.nix  postgresql.nix  rust.nix  sqlite.nix
home-manager/neovim/: avante-nvim.nix  default.nix  (+27 more)
lib/: make-system.nix
nixos/: chromium.nix  default.nix  docker.nix  fcitx5.nix  firefox.nix  ghostty.nix  git.nix  mac.nix  neovim.nix  podman.nix  rofi.nix  tailscale.nix  vmware.nix  wsl.nix
overlays/: buildRustPkgs.nix  default.nix  fish.nix  mcp-hub.nix  miko.nix  patch.nix
overlays/custom/db/: Cargo.toml  default.nix
overlays/custom/db/src/: config.rs  main.rs  show.rs  sqlls.rs  sqls.rs  sync.rs  update.rs
(+63 files in other folders)
